--- a/backend/sso/src/main/resources/application.properties
+++ b/backend/sso/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=sso
+
+server.port=9090
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
