--- a/backend/sso/src/main/resources/application.properties
+++ b/backend/sso/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=sso
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.username=
 spring.datasource.password=
-spring.datasource.url=jdbc:mysql://172.16.0.255:3306/MOCKSSO
+spring.datasource.url=jdbc:mysql://172.16.0.225:3306/MOCKSSO
 
 server.port=6767
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
