--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
-     "axios": "^1.6.2",
+    "axios": "^1.6.2",
+    "jwt-decode": "^4.0.0",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
