--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.2",
     "jwt-decode": "^4.0.0",
     "vue": "^3.5.25",
+    "vue-cookies": "^1.8.6",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
