CHANGED: Fixed docker stuff, updated seed file

--- a/backend/sso/src/main/resources/application.properties
+++ b/backend/sso/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=sso
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3307/MOCKSSO
+spring.datasource.url=jdbc:mysql://mysql:3306/MOCKSSO
 
 server.address=0.0.0.0
 server.port=6767
